--- a/assets/css/settings/_type.sass
+++ b/assets/css/settings/_type.sass
@@ -154,9 +154,11 @@ code
   line-height: 0
 
 pre
-  padding: $baseline
-  margin: 0 0 $baseline
   background: $shade
+  margin: 0 0 $baseline
+  max-width: 100%
+  overflow-y: auto
+  padding: $baseline
 
   code
     background: transparent
